--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   </style>
 </head>
 <body>
-  <div id = "wrap">
-    <div id = "wrap-center">
-      <div id="header">
-          <div id ="header-title">
+  <div class = "wrap">
+    <div class = "wrap-center">
+      <div class="header">
+          <div class ="header-title">
             <h1> SO EASY </h1> 
           </div>
-          <div id="member-box">
-            <div id="member">
-              <a href="#" id="login">로그인</a>
-              <a href="#" id="join">회원가입</a>
+          <div class="member-box">
+            <div class="member">
+              <a href="#" class="login">로그인</a>
+              <a href="#" class="join">회원가입</a>
             </div>
           </div>
       </div>
-      <div id ="main"> 
-        <div id="sidemain">
-          <div class="btn-group-vertical">
-            <button type="button" class="btn btn-dark">E-book</button>
-            <button type="button" class="btn btn-dark">시뮬레이션 영상</button>
+      <div class ="main"> 
+        <div class="sidemain">
+          <div class="choosebtn">
+            <button class="btn1">E-book</button>
+            <button class="btn2">시뮬레이션 영상</button>
           </div>
         </div>
-        <div id="realmain"></div>
+        <div class="realmain"></div>
       </div>
-      <div id="footer">
+      <div class="footer">
         <p> @한번에 쉬운 설명서를 볼 수 있는 유용한 사이트</p>
       </div>
     </div>
