--- a/product.html
+++ b/product.html
@@ -1,17 +1,13 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="wclassth=device-wclassth, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="product.css" />
     <title>SO EASY BOOK</title>
-    <style></style>
   </head>
   <body>
     <div class="wrap">
@@ -31,28 +27,19 @@
           <div class="book">
             <img class="container" src="image/baemin.png" />
             <button>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-wclassth="1.5"
-                stroke="currentColor"
+              <img
                 class="shareimg"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5"
-                />
-              </svg>
+                src="image/share_icon.svg"
+                alt="share_icon"
+              />
               <span>공유하기</span>
             </button>
           </div>
-          <div class="productbtn">
+          <div class="productinfo">
             <div class="info">
               <div class="title1">
                 <div class="item1">제목</div>
-                <div>배달의 민족 사용 설명서</div>
+                <div>배달의 민족 설명서</div>
               </div>
               <div class="title2">
                 <div class="item2">가격</div>
@@ -63,58 +50,26 @@
               </div>
             </div>
             <div class="btngroup">
-              <button>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-wclassth="1.5"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5z"
-                  />
-                </svg>
-                <span>바로 구매</span>
+              <button type="button">
+                <img src="image/card_icon.svg" alt="card_icon" />
+                <a href="buyitem.html">
+                  <span>바로 구매</span>
+                </a>
               </button>
               <button>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-wclassth="1.5"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z"
-                  />
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-                  />
-                </svg>
-                <span>미리보기</span>
+                <img src="image/preveiw_icon.svg" alt="preveiw_icon" />
+                <a href="preview.html">
+                  <span>미리보기</span>
+                </a>
               </button>
-              <button>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-wclassth="1.5"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-                  />
-                </svg>
-                <span>100</span>
+              <button class="heartBtn" onclick="clickLike()">
+                <img id="heart" src="image/heart_icon.svg" alt="heart_icon" />
+                <img
+                  id="heartfill"
+                  src="image/heart_fill_icon.svg"
+                  alt="heart_fill_icon"
+                />
+                <span class="countheart">100</span>
               </button>
             </div>
           </div>
