--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="product.css" />
     <title>SO EASY BOOK</title>
+    <script src="product.js"></script>
   </head>
   <body>
     <div class="wrap">
@@ -62,14 +63,14 @@
                   <span>미리보기</span>
                 </a>
               </button>
-              <button class="heartBtn" onclick="clickLike()">
+              <button class="heartBtn" onclick="likeBtn()">
                 <img id="heart" src="image/heart_icon.svg" alt="heart_icon" />
                 <img
                   id="heartfill"
                   src="image/heart_fill_icon.svg"
                   alt="heart_fill_icon"
                 />
-                <span class="countheart">100</span>
+                <span class="countheart">0</span>
               </button>
             </div>
           </div>
