--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     />
     <link rel="stylesheet" href="product.css" />
     <title>SO EASY BOOK</title>
-    <script src="product.js"></script>
+    <!-- <script src="product.js"></script> -->
   </head>
   <body>
     <div class="wrap">
